# fish_scales

./: .gitignore  CLAUDE.md  README.md  crop_figures.py  extract_images.py  mcptest.py  pyproject.toml  runfish.bat
.claude/: cc_setup.log.jsonl  settings.local.json
adws/: README.md  adw_build_iso.py  adw_document_iso.py  adw_patch_iso.py  adw_plan_build_document_iso.py  adw_plan_build_iso.py  adw_plan_build_review_iso.py  adw_plan_build_test_iso.py  adw_plan_build_test_review_iso.py  adw_plan_iso.py  adw_review_iso.py  adw_sdlc_iso.py  adw_sdlc_zte_iso.py  adw_ship_iso.py  adw_test_iso.py  test_gh_comment_posting.py  test_gh_in_subprocess.py  test_gh_performance.py  test_pipe_deadlock_accurate.py  test_pipe_deadlock_broken.py  test_pipe_deadlock_child.py  test_pipe_deadlock_fixed.py  test_pipe_deadlock_runner.py  test_real_workflow.py  test_subprocess_timing.py  test_trigger_with_fix.py
docs/: SucesssfulAgentExtractionRun.txt  annotations-persistence.md  fish-scale-metrics-extraction.md  history-of-implementation-so-far-11-Dec-2025.md  implementation-history.md  openrouter-how-to.md  slo-persistence.md
images/: M_kelleri_HLMD-Me_15576_posterior_detail3.tif  M_kelleri_HLMD-Me_15576_ventral_detail.tif  PBP-MES_358_scale6_side1_detail3.tif
msgs/: Microstructure on fish scales.msg
scripts/: migrate_slo_to_annotations.py  tune_parameters.py
specs/: AI-Extraction-Assistent.md  agent-run-logging-spec.md  agentic-editing-tab.md  ai-with-openrouter.md  area-delete.md  color-themed-ui.md  coordinate-grid.md  dataset-history-tracking.md  datatab-rationalization.md  (+27 more)
(+132 files in other folders)
