[project]
name = "fish-scale-analysis"
version = "0.1.0"
description = "Extract tubercle metrics from fish scale SEM images for species identification"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-image>=0.21.0",
    "tifffile>=2023.7.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "rich>=13.0.0",
    "rich-argparse>=1.4.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
mcp = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]
agent = [
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
]

[project.scripts]
fish-scale-measure = "fish_scale_analysis.cli:main"
fish-scale-ui = "fish_scale_ui.run:main"
fish-scale-mcp = "fish_scale_mcp.cli:main"
fish-scale-agent = "fish_scale_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fish_scale_analysis", "src/fish_scale_ui", "src/fish_scale_mcp", "src/fish_scale_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
